fix(styles): refine button margin and dropdown shadow spacing
Adjusted the CSS selector to more accurately apply margins to specific button elements within card bodies, enhancing layout consistency. Corrected minor formatting issue in the dropdown menu's box-shadow property for improved code readability.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -81,7 +81,7 @@ h5 {
   font-size: x-large;
 }
 
-.card-body .btn-primary:not(:first-child) {
+.card-body :not(p):not(:first-child):not(.dropdown-content):not(.dropdown-toggle-area) {
   margin-top: 10px;
 }
 
@@ -223,7 +223,7 @@ h5 {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
